v2/advanced/testing.mdx
---
title: Testing
---

import V2UpgradeWarning from "/snippets/v2-upgrade-warning.mdx";

<V2UpgradeWarning />

There are many different ways to test an Inertia application. This page provides a quick overview of the tools available.

## End-to-end Tests

One popular approach to testing your JavaScript page components is to use an end-to-end testing tool like [Cypress](https://www.cypress.io/) or [Pest](https://pestphp.com). These are browser automation tools that allow you to run real simulations of your app in the browser. These tests are known to be slower; however, since they test your application at the same layer as your end users, they can provide a lot of confidence that your app is working correctly. And, since these tests are run in the browser, your JavaScript code is actually executed and tested as well.

## Client-Side Unit Tests

Another approach to testing your page components is using a client-side unit testing framework, such as [Vitest](https://vitest.dev/), [Jest](https://jestjs.io/), or [Mocha](https://mochajs.org/). This approach allows you to test your JavaScript page components in isolation using Node.js.

## Endpoint Tests

In addition to testing your JavaScript page components, you will likely want to also test the Inertia responses that are returned by your server-side framework. A popular approach to doing this is using endpoint tests, where you make requests to your application and examine the responses. Laravel [provides tooling](https://laravel.com/docs/http-tests) for executing these types of tests.

However, to make this process even easier, Inertia's Laravel adapter provides additional HTTP testing tools. Let's take a look at an example.

<CodeGroup>

```php Laravel icon="laravel"
use Inertia\Testing\AssertableInertia as Assert;

class PodcastsControllerTest extends TestCase
{
    public function test_can_view_podcast()
    {
        $this->get('/podcasts/41')
            ->assertInertia(fn (Assert $page) => $page
                ->component('Podcasts/Show')
                ->has('podcast', fn (Assert $page) => $page
                    ->where('id', $podcast->id)
                    ->where('subject', 'The Laravel Podcast')
                    ->where('description', 'The Laravel Podcast brings you Laravel and PHP development news and discussion.')
                    ->has('seasons', 4)
                    ->has('seasons.4.episodes', 21)
                    ->has('host', fn (Assert $page) => $page
                        ->where('id', 1)
                        ->where('name', 'Matt Stauffer')
                    )
                    ->has('subscribers', 7, fn (Assert $page) => $page
                        ->where('id', 2)
                        ->where('name', 'Claudio Dekker')
                        ->where('platform', 'Apple Podcasts')
                        ->etc()
                        ->missing('email')
                        ->missing('password')
                    )
                )
            );
    }
}
```

```csharp .NET icon="dotnet"
using System.Text.Json;
using Microsoft.AspNetCore.Mvc.Testing;

public class PodcastsControllerTest
    : IClassFixture<WebApplicationFactory<Program>>
{
    private readonly HttpClient _client;

    public PodcastsControllerTest(
        WebApplicationFactory<Program> factory)
    {
        _client = factory.CreateClient();
    }

    [Fact]
    public async Task CanViewPodcast()
    {
        var request = new HttpRequestMessage(
            HttpMethod.Get, "/podcasts/41");
        request.Headers.Add("X-Inertia", "true");
        request.Headers.Add("X-Inertia-Version", "1");

        var response = await _client.SendAsync(request);
        response.EnsureSuccessStatusCode();

        var content = await response.Content
            .ReadAsStringAsync();
        var page = JsonDocument.Parse(content)
            .RootElement;

        Assert.Equal("Podcasts/Show",
            page.GetProperty("component").GetString());

        var podcast = page.GetProperty("props")
            .GetProperty("podcast");
        Assert.Equal("The Laravel Podcast",
            podcast.GetProperty("subject").GetString());

        var host = podcast.GetProperty("host");
        Assert.Equal(1,
            host.GetProperty("id").GetInt32());
        Assert.Equal("Matt Stauffer",
            host.GetProperty("name").GetString());

        var subscribers = podcast.GetProperty("subscribers");
        Assert.Equal(7, subscribers.GetArrayLength());
    }
}
```

</CodeGroup>

As you can see in the example above, you may use these assertion methods to assert against the content of the data provided to the Inertia response. In addition, you may assert that array data has a given length as well as scope your assertions.

You may use the `inertiaProps` method to retrieve the props returned in the response. You can pass a key to retrieve a specific property, and nested properties are supported using "dot" notation.

<CodeGroup>

```php Laravel icon="laravel"
$response = $this->get('/podcasts/41');

// Returns all props...
$response->inertiaProps();

// Returns a specific prop...
$response->inertiaProps('podcast');

// Returns a nested prop using "dot" notation...
$response->inertiaProps('podcast.id');
```

```csharp .NET icon="dotnet"
var request = new HttpRequestMessage(
    HttpMethod.Get, "/podcasts/41");
request.Headers.Add("X-Inertia", "true");
request.Headers.Add("X-Inertia-Version", "1");

var response = await _client.SendAsync(request);
var content = await response.Content.ReadAsStringAsync();
var page = JsonDocument.Parse(content).RootElement;

// Returns all props...
var props = page.GetProperty("props");

// Returns a specific prop...
var podcast = props.GetProperty("podcast");

// Returns a nested prop...
var podcastId = props.GetProperty("podcast")
    .GetProperty("id");
```

</CodeGroup>

Let's dig into the `assertInertia` method and the available assertions in detail. First, to assert that the Inertia response has a property, you may use the `has` method. You can think of this method as being similar to PHP's `isset` function.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    // Checking if a root-level property has 7 items...
    ->has('podcasts', 7)

    // Checking nested properties using "dot" notation...
    ->has('podcast.subscribers', 7)
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");

// Checking if a root-level property has 7 items...
Assert.Equal(7, props.GetProperty("podcasts")
    .GetArrayLength());

// Checking nested properties...
Assert.Equal(7, props.GetProperty("podcast")
    .GetProperty("subscribers").GetArrayLength());
```

</CodeGroup>

To assert that an Inertia property has a specified amount of items, you may provide the expected size as the second argument to the `has` method.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    // Checking if a root-level property has 7 items...
    ->has('podcasts', 7)

    // Checking nested properties using "dot" notation...
    ->has('podcast.subscribers', 7)
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");

// Checking if a root-level property has 7 items...
Assert.Equal(7, props.GetProperty("podcasts")
    .GetArrayLength());

// Checking nested properties...
Assert.Equal(7, props.GetProperty("podcast")
    .GetProperty("subscribers").GetArrayLength());
```

</CodeGroup>

The `has` method may also be used to scope properties in order to lessen repetition when asserting against nested properties.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    // Creating a single-level property scope...
    ->has('message', fn (Assert $page) => $page
        // We can now continue chaining methods...
        ->has('subject')
        ->has('comments', 5)

        // And can even create a deeper scope using "dot" notation...
        ->has('comments.0', fn (Assert $page) => $page
            ->has('body')
            ->has('files', 1)
            ->has('files.0', fn (Assert $page) => $page
                ->has('url')
            )
        )
    )
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");

// Navigating into nested properties...
var message = props.GetProperty("message");

Assert.True(message.TryGetProperty("subject",
    out _));
var comments = message.GetProperty("comments");
Assert.Equal(5, comments.GetArrayLength());

// Scoping into the first comment...
var firstComment = comments[0];
Assert.True(firstComment.TryGetProperty("body",
    out _));
var files = firstComment.GetProperty("files");
Assert.Equal(1, files.GetArrayLength());
Assert.True(files[0].TryGetProperty("url", out _));
```

</CodeGroup>

When scoping into Inertia properties that are arrays or collections, you may also assert that a specified number of items are present in addition to scoping into the first item.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    // Assert that there are 5 comments and automatically scope into the first comment...
    ->has('comments', 5, fn (Assert $page) => $page
        ->has('body')
        // ...
    )
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");

// Assert that there are 5 comments and scope into
// the first comment...
var comments = props.GetProperty("comments");
Assert.Equal(5, comments.GetArrayLength());

var firstComment = comments[0];
Assert.True(firstComment.TryGetProperty("body",
    out _));
```

</CodeGroup>

To assert that an Inertia property has an expected value, you may use the `where` assertion.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->has('message', fn (Assert $page) => $page
        // Assert that the subject prop matches the given message...
        ->where('subject', 'This is an example message')

        // Or, assert against deeply nested values...
        ->where('comments.0.files.0.name', 'example-attachment.pdf')
    )
);
```

```csharp .NET icon="dotnet"
var message = props.GetProperty("message");

// Assert that the subject prop matches the given
// message...
Assert.Equal("This is an example message",
    message.GetProperty("subject").GetString());

// Or, assert against deeply nested values...
Assert.Equal("example-attachment.pdf",
    message.GetProperty("comments")[0]
        .GetProperty("files")[0]
        .GetProperty("name").GetString());
```

</CodeGroup>

Inertia's testing methods will automatically fail when you haven't interacted with at least one of the props in a scope. While this is generally useful, you might run into situations where you're working with unreliable data (such as from an external feed), or with data that you really don't want interact with in order to keep your test simple. For these situations, the `etc` method exists.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->has('message', fn (Assert $page) => $page
        ->has('subject')
        ->has('comments')
        ->etc()
    )
);
```

```csharp .NET icon="dotnet"
var message = props.GetProperty("message");

// Assert specific properties exist without needing
// to assert against every property...
Assert.True(message.TryGetProperty("subject",
    out _));
Assert.True(message.TryGetProperty("comments",
    out _));
// Other properties may exist but are not asserted
```

</CodeGroup>

The `missing` method is the exact opposite of the `has` method, ensuring that the property does not exist. This method makes a great companion to the `etc` method.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->has('message', fn (Assert $page) => $page
        ->has('subject')
        ->missing('published_at')
        ->etc()
    )
);
```

```csharp .NET icon="dotnet"
var message = props.GetProperty("message");

Assert.True(message.TryGetProperty("subject",
    out _));

// Assert that the property does not exist...
Assert.False(message.TryGetProperty("published_at",
    out _));
```

</CodeGroup>

### Testing Partial Reloads

You may use the `reloadOnly` and `reloadExcept` methods to test how your application responds to [partial reloads](/v2/data-props/partial-reloads). These methods perform a follow-up request and allow you to make assertions against the response.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->has('orders')
    ->missing('statuses')
    ->reloadOnly('statuses', fn (Assert $reload) => $reload
        ->missing('orders')
        ->has('statuses', 5)
    )
);
```

```csharp .NET icon="dotnet"
// Test partial reloads by sending a follow-up
// request with the X-Inertia-Partial-Data header
var props = page.GetProperty("props");
Assert.True(props.TryGetProperty("orders", out _));
Assert.False(props.TryGetProperty("statuses",
    out _));

// Follow-up partial reload request
var partialRequest = new HttpRequestMessage(
    HttpMethod.Get, "/orders");
partialRequest.Headers.Add("X-Inertia", "true");
partialRequest.Headers.Add("X-Inertia-Version", "1");
partialRequest.Headers.Add(
    "X-Inertia-Partial-Data", "statuses");
partialRequest.Headers.Add(
    "X-Inertia-Partial-Component", "Orders/Index");

var reload = await _client.SendAsync(partialRequest);
var reloadPage = JsonDocument.Parse(
    await reload.Content.ReadAsStringAsync())
    .RootElement;
var reloadProps = reloadPage.GetProperty("props");

Assert.False(reloadProps.TryGetProperty("orders",
    out _));
Assert.Equal(5, reloadProps.GetProperty("statuses")
    .GetArrayLength());
```

</CodeGroup>

Instead of passing a single prop as a string, you may also pass an array of props to `reloadOnly` or `reloadExcept`.

### Testing Deferred Props

You may use the `loadDeferredProps` method to test how your application responds to [deferred props](/v2/data-props/deferred-props). This method performs a follow-up request to load the deferred properties and allows you to make assertions against the response.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->has('users')
    ->has('roles')
    ->missing('permissions') // Deferred prop not in initial response
    ->loadDeferredProps(fn (Assert $reload) => $reload
        ->has('permissions')
        ->where('permissions.0.name', 'edit users')
    )
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");
Assert.True(props.TryGetProperty("users", out _));
Assert.True(props.TryGetProperty("roles", out _));
Assert.False(props.TryGetProperty("permissions",
    out _));

// Load deferred props via a partial reload request
var deferredRequest = new HttpRequestMessage(
    HttpMethod.Get, "/current-url");
deferredRequest.Headers.Add("X-Inertia", "true");
deferredRequest.Headers.Add(
    "X-Inertia-Version", "1");
deferredRequest.Headers.Add(
    "X-Inertia-Partial-Data", "permissions");
deferredRequest.Headers.Add(
    "X-Inertia-Partial-Component", "ComponentName");

var deferredResponse = await _client
    .SendAsync(deferredRequest);
var deferredPage = JsonDocument.Parse(
    await deferredResponse.Content
        .ReadAsStringAsync()).RootElement;
var deferredProps = deferredPage
    .GetProperty("props");

Assert.True(deferredProps.TryGetProperty(
    "permissions", out var permissions));
Assert.Equal("edit users",
    permissions[0].GetProperty("name").GetString());
```

</CodeGroup>

You may also load specific deferred prop groups by passing the group name as the first argument to the `loadDeferredProps` method.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->has('users')
    ->missing('teams')
    ->missing('projects')
    ->loadDeferredProps('attributes', fn (Assert $reload) => $reload
        ->has('teams', 5)
        ->has('projects')
        ->missing('permissions') // Different group
    )
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");
Assert.True(props.TryGetProperty("users", out _));
Assert.False(props.TryGetProperty("teams", out _));
Assert.False(props.TryGetProperty("projects",
    out _));

// Load specific deferred prop group
var deferredRequest = new HttpRequestMessage(
    HttpMethod.Get, "/current-url");
deferredRequest.Headers.Add("X-Inertia", "true");
deferredRequest.Headers.Add(
    "X-Inertia-Version", "1");
deferredRequest.Headers.Add(
    "X-Inertia-Partial-Data", "teams,projects");
deferredRequest.Headers.Add(
    "X-Inertia-Partial-Component", "ComponentName");

var reload = await _client.SendAsync(deferredRequest);
var reloadPage = JsonDocument.Parse(
    await reload.Content.ReadAsStringAsync())
    .RootElement;
var reloadProps = reloadPage.GetProperty("props");

Assert.Equal(5, reloadProps.GetProperty("teams")
    .GetArrayLength());
Assert.True(reloadProps.TryGetProperty("projects",
    out _));
Assert.False(reloadProps.TryGetProperty(
    "permissions", out _));
```

</CodeGroup>

Instead of passing a single group as a string, you may also pass an array of groups to `loadDeferredProps`.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    ->loadDeferredProps(['default', 'attributes'], fn (Assert $reload) => $reload
        ->has('permissions')
        ->has('teams')
        ->has('projects')
    )
);
```

```csharp .NET icon="dotnet"
// Load multiple deferred prop groups
var deferredRequest = new HttpRequestMessage(
    HttpMethod.Get, "/current-url");
deferredRequest.Headers.Add("X-Inertia", "true");
deferredRequest.Headers.Add(
    "X-Inertia-Version", "1");
deferredRequest.Headers.Add(
    "X-Inertia-Partial-Data",
    "permissions,teams,projects");
deferredRequest.Headers.Add(
    "X-Inertia-Partial-Component", "ComponentName");

var reload = await _client.SendAsync(deferredRequest);
var reloadPage = JsonDocument.Parse(
    await reload.Content.ReadAsStringAsync())
    .RootElement;
var reloadProps = reloadPage.GetProperty("props");

Assert.True(reloadProps.TryGetProperty(
    "permissions", out _));
Assert.True(reloadProps.TryGetProperty("teams",
    out _));
Assert.True(reloadProps.TryGetProperty("projects",
    out _));
```

</CodeGroup>

### Testing Flash Data

You may use the `hasFlash` and `missingFlash` methods to test [flash data](/v2/data-props/flash-data) in your Inertia responses.

<CodeGroup>

```php Laravel icon="laravel"
$response->assertInertia(fn (Assert $page) => $page
    // Assert flash data exists...
    ->hasFlash('message')

    // Assert flash data has a specific value...
    ->hasFlash('message', 'Item saved!')

    // Nested values are supported using "dot" notation...
    ->hasFlash('notification.type', 'success')

    // Assert flash data does not exist...
    ->missingFlash('error')
);
```

```csharp .NET icon="dotnet"
var props = page.GetProperty("props");
var flash = props.GetProperty("flash");

// Assert flash data exists...
Assert.True(flash.TryGetProperty("message",
    out _));

// Assert flash data has a specific value...
Assert.Equal("Item saved!",
    flash.GetProperty("message").GetString());

// Nested values...
Assert.Equal("success",
    flash.GetProperty("notification")
        .GetProperty("type").GetString());

// Assert flash data does not exist...
Assert.False(flash.TryGetProperty("error", out _));
```

</CodeGroup>

#### Redirect Responses

The `hasFlash` and `missingFlash` methods above only work on rendered Inertia page responses. For redirect responses, you may use the `assertInertiaFlash` and `assertInertiaFlashMissing` methods directly on the test response to assert against the session's flash data.

<CodeGroup>

```php Laravel icon="laravel"
$response = $this->post('/users');

$response->assertRedirect('/dashboard')
    ->assertInertiaFlash('message')
    ->assertInertiaFlash('message', 'User created!')
    ->assertInertiaFlash('notification.type', 'success')
    ->assertInertiaFlashMissing('error');
```

```csharp .NET icon="dotnet"
var response = await _client.PostAsync("/users",
    new StringContent("{}"));

// Assert redirect
Assert.Equal(HttpStatusCode.Redirect,
    response.StatusCode);
Assert.Equal("/dashboard",
    response.Headers.Location?.ToString());

// Follow the redirect and check flash data
// in the Inertia response
var redirectRequest = new HttpRequestMessage(
    HttpMethod.Get, response.Headers.Location);
redirectRequest.Headers.Add("X-Inertia", "true");
redirectRequest.Headers.Add(
    "X-Inertia-Version", "1");

var redirectResponse = await _client
    .SendAsync(redirectRequest);
var page = JsonDocument.Parse(
    await redirectResponse.Content
        .ReadAsStringAsync()).RootElement;
var flash = page.GetProperty("props")
    .GetProperty("flash");

Assert.Equal("User created!",
    flash.GetProperty("message").GetString());
Assert.False(flash.TryGetProperty("error", out _));
```

</CodeGroup>
